--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
 
     <div layout="column" flex>
         <md-toolbar class="md-whiteframe-glow-z2 md-default-theme">
+		<md-button show-sm>
+			<i class="fa fa-bars"></i>
+		</md-button>
             <h1 class="md-toolbar-tools">
 		    <a ng-href="#/">{{title}}</a>
     	    </h1>
