--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <script src="http://code.highcharts.com/adapters/standalone-framework.js"></script>
 
-    <!--For head map I include these links-->
+    <!--For head map -->
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://code.highcharts.com/modules/heatmap.js"></script>
-    <script src="http://code.highcharts.com/modules/exporting.js"></script>
+
+    
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <link rel="stylesheet" href="app/vendor.css">
